--- a/app/views/backend/journals/balance.html.haml
+++ b/app/views/backend/journals/balance.html.haml
@@ -31,7 +31,7 @@
       - for item in @balance
         - d = item[0].size-1
         - if item[1].to_i > 0
-          - account = @current_company.accounts.find(item[1])
+          - account = Account.find(item[1])
           %tr{:class => cycle(:odd, :even)}
             %td.code= link_to(account.number, action: :show, controller: :accounts, id: account.id)
             %td=link_to(account.name, action: :show, controller: :accounts, id: account.id)
