--- a/app/views/backend/interventions/_form.html.haml
+++ b/app/views/backend/interventions/_form.html.haml
@@ -1,13 +1,14 @@
 -# if !f.object.new_record? or procedure = Procedo[params[:procedure]]
 - if procedure = f.object.reference
+  = hidden_field_tag nil, compute_backend_interventions_path(format: :json), data: {procedure_computing: procedure.name}
   = field_set do
     = f.input :reference_name, as: :hidden
-    = f.referenced_association :production_support
+    = f.referenced_association :production_support, input_html: {data: {procedure: procedure.name, procedure_global: "support", intervention_updater: "global:support"}}
     = f.referenced_association :issue
     = f.input :recommended, show: :prescriptions
     = f.input :provisional
     -#= f.referenced_association :production
-    = f.input :started_at
+    = f.input :started_at, input_html: {data: {procedure: procedure.name, procedure_global: "at", intervention_updater: "global:at"}}
     = f.input :stopped_at
 
   = field_set(:prescriptions) do
@@ -15,7 +16,6 @@
     = f.referenced_association :recommender
 
   = field_set :casting do
-    = hidden_field_tag nil, compute_backend_interventions_url(format: :json), data: {procedure_computing: procedure.name}
     - if f.object.new_record? and f.object.casts.empty?
       - for name, variable in procedure.variables
         - f.object.casts.new(reference_name: name)
@@ -32,18 +32,18 @@
                 .title= handler.human_name
                 .value
                   - if handler.widget == :number
-                    = number_field_tag(nil, nil, data: {procedure: procedure.name, variable: reference.name, variable_handler: handler.name, intervention_updater: "#{reference.name}:handlers:#{handler.name}"})
+                    = number_field_tag(nil, nil, data: {procedure: procedure.name, variable: reference.name, variable_handler: handler.name, intervention_updater: "casting:#{reference.name}:handlers:#{handler.name}"})
                     - if handler.unit?
                       .add-on= handler.unit.symbol
                   - elsif handler.widget == :map
-                    = shape_field_tag(nil, nil, data: {procedure: procedure.name, variable: reference.name, variable_handler: handler.name, intervention_updater: "#{reference.name}:handlers:#{handler.name}"})
+                    = shape_field_tag(nil, nil, data: {procedure: procedure.name, variable: reference.name, variable_handler: handler.name, intervention_updater: "casting:#{reference.name}:handlers:#{handler.name}"})
             -# Variant
             - if reference.known_variant?
-              = v.association :variant, as: :hidden, input_html: {data: {procedure: procedure.name, variable: reference.name, variable_variant: reference.name, intervention_updater: "#{reference.name}:variant"}}
+              = v.association :variant, as: :hidden, input_html: {data: {procedure: procedure.name, variable: reference.name, variable_variant: reference.name, intervention_updater: "casting:#{reference.name}:variant"}}
             - else
               .handler.long
                 .title= InterventionCast.human_attribute_name(:variant)
-                .value= v.referenced_association_field :variant, source: {scope: reference.scope_hash.merge(availables: true)}, input_html: {data: {procedure: procedure.name, variable: reference.name, variable_variant: reference.name, intervention_updater: "#{reference.name}:variant"}}
+                .value= v.referenced_association_field :variant, source: {scope: reference.scope_hash.merge(availables: true)}, input_html: {data: {procedure: procedure.name, variable: reference.name, variable_variant: reference.name, intervention_updater: "casting:#{reference.name}:variant"}}
           -#
             - if reference.need_population?
               = v.input_field :population
@@ -53,7 +53,7 @@
             -# if reference.need_shape?
               = v.shape_field # shadow: self.shadow_shape
       - else
-        = v.referenced_association :actor, label: reference.human_name, source: {scope: reference.scope_hash.merge(availables: true)}, input_html: {data: {procedure: procedure.name, variable: reference.name, variable_actor: reference.name, intervention_updater: "#{reference.name}:actor"}}
+        = v.referenced_association :actor, label: reference.human_name, source: {scope: reference.scope_hash.merge(availables: true)}, input_html: {data: {procedure: procedure.name, variable: reference.name, variable_actor: reference.name, intervention_updater: "casting:#{reference.name}:actor"}}
 
   -# field_set :operations do
     - if f.object.operations.empty? or f.object.new_record?
