Fixes analyses graph cell

--- a/app/views/backend/dashboards/production.html.haml
+++ b/app/views/backend/dashboards/production.html.haml
@@ -7,5 +7,5 @@
   - b.hbox do
     -# b.cell :rss, :title => "Tendances Bovins de Boucherie", params: {:url => "http://www.lafranceagricole.fr/Rss/cours-et-marches/elevage/bovins-de-boucherie-157.html"}
     - b.cell :elapsed_interventions_times_by_activities
-    - b.cell :last_milk_result
+    - b.cell :last_analyses
     
