--- a/app/views/backend/productions/show.html.haml
+++ b/app/views/backend/productions/show.html.haml
@@ -13,7 +13,7 @@
 
   - b.hbox do
     - if Nomen::Varieties[resource.variant.variety].self_and_parents.include?(Nomen::Varieties[:milk])
-      - b.cell :last_milk_result, params: {campaign_id: resource.campaign_id}
+      - b.cell :last_analyses, params: {campaign_id: resource.campaign_id}
 
     - elsif Nomen::Varieties[resource.variant.variety].self_and_parents.include?(Nomen::Varieties[:plant])
       - b.cell :map do
