--- a/app/views/backend/animals/show.html.haml
+++ b/app/views/backend/animals/show.html.haml
@@ -71,11 +71,11 @@
             hash[pair.read_at.to_usec] = pair.value.to_d
             hash
           end.collect{|k,v| [k, v.to_s.to_f] }
-          data << [now.to_usec, resource.get(indicator, at: now).to_d.to_s.to_f]
+          # data << [now.to_usec, resource.get(indicator, at: now).to_d.to_s.to_f]
           series << {name: indicator.human_name, data: data, step: 'left'}
         end
 
-      = line_chart(series, legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom'}, y_axis: {title: { text: :indicator.tl}}, x_axis: {type: 'datetime', title: { enabled: true, text: :months.tl}, min: min.to_usec})
+      = spline_chart(series, legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom'}, y_axis: {title: { text: :indicator.tl}}, x_axis: {type: 'datetime', title: { enabled: true, text: :months.tl}, min: min.to_usec})
 
     -# b.cell :indicators_evolutions do
       - if resource.born_at
