Fixes paperclip new version's side effects

--- a/app/views/backend/product_nature_categories/_form.html.haml
+++ b/app/views/backend/product_nature_categories/_form.html.haml
@@ -6,9 +6,11 @@
 = field_set(:nature) do
   = f.input :reductible
   = f.input :depreciable, :show => :financial_asset_account_field_zone
+  = f.referenced_association :financial_asset_account, wrapper_html: {id: :financial_asset_account_field_zone}
   = f.input :saleable, :show => :sales
-  = f.input :purchasable, :show => :purchase
+  = f.input :purchasable, :show => :purchases
   = f.input :storable, :show => :stock_account_field_zone
+  = f.referenced_association :stock_account, wrapper_html: {id: :stock_account_field_zone}
   = f.input :subscribing, :show => :subscriptions
 
 = field_set(:subscriptions) do
@@ -23,10 +25,8 @@
   = f.referenced_association :charge_account
   = f.association :purchase_taxes
 
-= field_set(:accountancy) do
-  = f.referenced_association :financial_asset_account, wrapper_html: {id: :financial_asset_account_field_zone}
-  = f.referenced_association :stock_account, wrapper_html: {id: :stock_account_field_zone}
+-# = field_set(:accountancy) do
 
-= field_set(:natures) do
+-#= field_set(:natures) do
   = f.nested_association(:natures)
   
