--- a/app/views/layouts/backend.html.haml
+++ b/app/views/layouts/backend.html.haml
@@ -25,7 +25,7 @@
           = heading_tag
         = deck(:id => :content) do
           = subheading_tag
-          - main_toolbar_tag
+          = main_toolbar_tag
           = notifications_tag
           = yield
       #help
