Adds pick/incorporate functionnality for product_natures/variants/categories

--- a/app/views/backend/product_natures/_form.html.haml
+++ b/app/views/backend/product_natures/_form.html.haml
@@ -10,7 +10,7 @@
   = f.input :description
   = f.picture
 
-= field_set(:variants) do
+-#= field_set(:variants) do
   = f.nested_association(:variants)
 
 = field_set(:definition) do
