update wine view

--- a/app/views/backend/equipments/show.html.haml
+++ b/app/views/backend/equipments/show.html.haml
@@ -25,6 +25,8 @@
   - b.hbox do
     - b.cell(:intervention_casts) do
       = list(:intervention_casts)
+    - b.cell(:contained_products) do
+      = list(:contained_products)
     - b.cell(:places) do
       = list(:places)
   - b.hbox do
