--- a/app/views/backend/cells/cropping_plan_on_cultivable_zones_cells/show.html.haml
+++ b/app/views/backend/cells/cropping_plan_on_cultivable_zones_cells/show.html.haml
@@ -1,29 +1,28 @@
-- if @campaigns
+- if @campaigns and activities = Activity.of_campaign(@campaigns).of_families(:vegetal_crops).order(:id) and activities.any?
   :ruby
-    #
-    activities = Activity.of_campaign(@campaigns).of_families(:vegetal_crops).order(:id)
-
-    productions = Production.of_campaign(@campaigns).where(:static_support => true, :activity_id => activities).reorder("activity_id, id")
-
-      if activities.count > 0 and productions.count > 0
-
-        activities_serie = activities.collect do |activity|
-          { name: activity.name, y: activity.area(@campaigns).in(:square_meter).to_d(:hectare).to_s.to_f, id: activity.id, color: cycle(*Backend::ChartsHelper::COLORS) }
-        end
-
-        productions_serie = productions.collect do |production|
-          { name: production.name, y: production.area.in(:square_meter).to_d(:hectare).to_s.to_f, id: production.id, color: ligthen(activities_serie.detect{|a| a[:id] == production.activity_id}[:color], 0.3) }
-        end
-
-        cultivable_zones_serie = CultivableZone.of_campaign(@campaigns).of_production(productions).reorder("activity_id, production_id, id").collect do |cultivable_zone|
-          { name: cultivable_zone.name, y: cultivable_zone.area.in(:square_meter).to_d(:hectare).to_s.to_f, color: ligthen(productions_serie.detect{|a| a[:id] == cultivable_zone.supports.first.production_id}[:color], 0.3) }
+    activities_serie = []
+    productions_serie = []
+    storages_serie = []
+    for activity in activities
+      y = activity.net_surface_area(@campaigns).to_d(:hectare).to_s.to_f
+      next if y.zero?
+      color = cycle(*Backend::ChartsHelper::COLORS)
+      activities_serie << { name: activity.name, y: y, color: color }
+      for production in activity.productions.of_campaign(@campaigns).order(:id)
+        y = production.net_surface_area.to_d(:hectare).to_s.to_f
+        next if y.zero?
+        productions_serie << { name: production.name, y: y, color: ligthen(color, 0.3) }
+        for storage in production.storages.order(:id)
+          # next unless storage.has_indicator? :net_surface_area
+          storages_serie << { name: storage.name, y: storage.net_surface_area.to_d(:hectare).to_s.to_f, color: ligthen(color, 0.6) }
         end
       end
+    end
 
     series = []
     series << {name: Activity.model_name.human, data: activities_serie, size: "50%", data_labels: {color: 'white', distance: -30} }
     series << {name: Production.model_name.human, data: productions_serie, size: "75%", inner_size: "50%", data_labels: {enabled: false}}
-    series << {name: CultivableZone.model_name.human, data: cultivable_zones_serie, size: "80%", inner_size: "75%"}
+    series << {name: CultivableZone.model_name.human, data: storages_serie, size: "80%", inner_size: "75%"}
 
   = pie_chart(series, tooltip: {point_format: '{point.y: 1.1f} Ha'}, title: @campaigns.name)
 - else
