update tracking for a mininum working and clean code.

--- a/app/views/backend/trackings/show.html.haml
+++ b/app/views/backend/trackings/show.html.haml
@@ -1,9 +1,15 @@
 - main_toolbar do |t|
-  - t.edit ressource
+  - t.edit resource
 
 = beehive do |b|
   - b.hbox do
     - b.cell do
       = attributes_list do |l|
         - l.attribute :name
+        - l.attribute :serial
         - l.attribute :description
+
+= beehive do |b|
+  - b.hbox do
+    - b.cell(:products) do
+      = list(:products)
