--- a/app/views/backend/events/index.html.haml
+++ b/app/views/backend/events/index.html.haml
@@ -1,4 +1,9 @@
-= kujaku
 - main_toolbar do |t|
   - t.new
-= list
+
+#calendar{'data-simple-calendar' => "true"}
+  = render "month"
+
+-#= kujaku
+ 
+-# = list
