--- a/app/views/backend/entities/_mail_fields.html.haml
+++ b/app/views/backend/entities/_mail_fields.html.haml
@@ -1,12 +1,12 @@
 -# Generated automatically. Don't edit this file.
--entity_address ||= f.object
+- entity_address ||= f.object
 .nested-fields
-  =link_to_remove_nested_association(:mail, f)
-  =f.input(:canal, as: :hidden, wrapper_html: {id: 'canal-field'})
-  =f.input(:mail_line_1, wrapper_html: {id: 'mail-line-1-field'})
-  =f.input(:mail_line_2, wrapper_html: {id: 'mail-line-2-field'})
-  =f.input(:mail_line_3, wrapper_html: {id: 'mail-line-3-field'})
-  =f.input(:mail_line_4, wrapper_html: {id: 'mail-line-4-field'})
-  =f.input(:mail_line_5, wrapper_html: {id: 'mail-line-5-field'})
-  =f.input(:mail_line_6, wrapper_html: {id: 'mail-line-6-field'})
-  =f.input(:mail_country, :collection => countries, wrapper_html: {id: 'mail-country-field'})
+  = link_to_remove_nested_association(:mail, f)
+  = f.input(:canal, as: :hidden, wrapper_html: {id: 'canal-field'})
+  = f.input(:mail_line_1, wrapper_html: {id: 'mail-line-1-field'})
+  = f.input(:mail_line_2, wrapper_html: {id: 'mail-line-2-field'})
+  = f.input(:mail_line_3, wrapper_html: {id: 'mail-line-3-field'})
+  = f.input(:mail_line_4, wrapper_html: {id: 'mail-line-4-field'})
+  = f.input(:mail_line_5, wrapper_html: {id: 'mail-line-5-field'})
+  = f.input(:mail_line_6, wrapper_html: {id: 'mail-line-6-field'})
+  = f.input(:mail_country, :collection => countries, wrapper_html: {id: 'mail-country-field'})
