--- a/app/views/backend/events/_form.html.haml
+++ b/app/views/backend/events/_form.html.haml
@@ -7,4 +7,7 @@
   -# TODO Manages refresh_depending_at
   = f.input :started_at
   = f.input :stopped_at
-  = f.input :duration, :refresh_depending_at => :nature
+  -# = f.input :duration, :refresh_depending_at => :nature
+
+= field_set(:participants) do
+  = f.nested_association(:participations)
