Unifies events in calendar

--- a/app/themes/tekyla/stylesheets/main.css.scss
+++ b/app/themes/tekyla/stylesheets/main.css.scss
@@ -1863,12 +1863,12 @@ ul.tree {
 }
 
 ul.desc-list {
-  @include description_list;
+  @include description-list;
 }
 
 .search {
   .results {
-    @include description_list;
+    @include description-list;
     padding: $default-gap;
   }
 
