--- a/app/views/backend/cells/events_cells/show.html.haml
+++ b/app/views/backend/cells/events_cells/show.html.haml
@@ -1,6 +1,6 @@
-.events
+%ul.desc-list.events
   - for event in @events
-    = link_to(backend_event_path(event), class: "event") do
-      %h3= event.name
-      %h4= event.started_at.l
-      %p= event.casting
+    %li
+      = link_to(backend_event_path(event), class: "event") do
+        %h3= event.started_at.l(format: "%H:%M") + " " + event.name
+        %p= event.casting
