--- a/app/views/backend/dashboards/relationship.html.haml
+++ b/app/views/backend/dashboards/relationship.html.haml
@@ -1,10 +1,13 @@
 = beehive do |b|
+  - b.cell :calendar
+
   - b.hbox do
     - b.cell :last_entities
     - if Event.any?
       - if current_user.participations.any?
         - b.cell :future_events, type: :events, params: {mode: :my_future}
       - b.cell :recent_events, type: :events, params: {mode: :last}
+
 
   -# b.hbox do
     - b.cell :rss, :title => "Dossiers", params: {:url => "http://www.lafranceagricole.fr/Rss/dossiers-11.html"}
