Doesn't fix "unread net_surface_area products" population counting

--- a/app/views/backend/product_nature_variants/show.html.haml
+++ b/app/views/backend/product_nature_variants/show.html.haml
@@ -4,6 +4,9 @@
 = beehive do |b|
   - b.hbox do
     - b.cell :general do
+      .info
+        %span.title= ProductNatureVariant.human_attribute_name(:nature)
+        %span.value= link_to(resource.nature.name, controller: :product_natures, action: :show, id: resource.nature_id)
       - for reading in resource.readings
         .info
           %span.title= reading.indicator.human_name
