--- a/app/views/backend/shared/_beehive.html.haml
+++ b/app/views/backend/shared/_beehive.html.haml
@@ -9,13 +9,13 @@
           - activeness = (cid.zero? ? {:class => 'active'} : {})
           %li{activeness}>
             = link_to("#b#{bid}c#{cid}", :class => "cell-title") do
-              = render 'backend/cell_title', :cell => cell
+              = render 'backend/shared/cell_title', :cell => cell
       .cells
         - box.each_with_index do |cell, cid|
           .cell{:id => "b#{bid}c#{cid}", :class => (cid.zero? ? ' active' : nil)}
             .cell-inner
               .cell-title
-                = render 'backend/cell_title', :cell => cell
+                = render 'backend/shared/cell_title', :cell => cell
                 %span{"data-toggle" => "cell"}
               - if cell.content?
                 .cell-content= cell.content
