--- a/app/views/backend/manure_management_plans/_form.html.haml
+++ b/app/views/backend/manure_management_plans/_form.html.haml
@@ -6,3 +6,10 @@
   = f.input :opened_at
   = f.input :selected
   = f.input :annotation
+
+:ruby
+  f.object.build_missing_zones
+
+- for zone in f.object.zones
+  = field_set zone.name do
+    %h4
