Deactivates guides for now

--- a/app/views/backend/dashboards/tools.html.haml
+++ b/app/views/backend/dashboards/tools.html.haml
@@ -2,7 +2,7 @@
   - b.hbox do
     - b.cell :last_issues
     -# b.cell :last_document_archives
-    - b.cell :guide_evolution
+    -# b.cell :guide_evolution
   - file = Rails.root.join("config", "tools.xml")
   - if file.exist?
     :ruby
